--- a/project.desktop.css
+++ b/project.desktop.css
@@ -1,5 +1,12 @@
 body {
     margin: 0;
+    font-family: 'Gamja Flower', cursive;
+    font-size: 28px;
+}
+
+h1, h2, h3 {
+    font-family: 'Pacifico', cursive;
+    font-weight: normal;
 }
 
 #nav {
@@ -11,6 +18,8 @@ body {
     top: 0;
     left: 0;
     right: 0;
+    z-index: 9000;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 .logo {
@@ -57,9 +66,7 @@ body {
     margin-left: 0;
     margin-right: 0;
     background-color: #2b57a1;
-    ;
     display: flex;
-    height: 550px;
 }
 
 .hero-left {
@@ -69,13 +76,11 @@ body {
 
 .hero-text {
     background: #2b57a1;
-    ;
     width: 50%;
-    margin: 110px auto 40px 200px;
+    margin: 20px auto 40px 50px;
     padding: 20px;
     text-align: center;
     color: #f1f4fc;
-    height: 100px;
 }
 
 .hero-text__small {
@@ -84,10 +89,18 @@ body {
 
 .hero-button {
     background: #2b57a1;
-    ;
     text-align: center;
     color: white;
     margin-bottom: 20px;
+    margin-top: 20px;
+    text-align: center;
+}
+.hero-button__color {
+    background: white;
+    padding: 5px 20px;
+    border-radius: 10px;
+    color: black;
+   
 }
 
 .hero-right {
