--- a/project.css
+++ b/project.css
@@ -1,359 +1,296 @@
 @media (max-width: 375px) {
-body {
-    margin: 0;
-    font-family: 'Gamja Flower', cursive;
-    font-size: 28px;
-    
-}
-
-h1, h2, h3 {
-    font-family: 'Pacifico', cursive;
-    font-weight: normal;
-}
-
-#nav {
-    height: 76px;
-    background: #2b57a1;
-    /* display: flex; */
-    justify-content: space-between;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 9000;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-}
-
-.logo {
-    height: 80px;
-    width: 120px;
-    margin-left: 135px;
-    align-self: center;
-    /* display: flex; */
-    justify-content: center;
-    align-items: center;
-}
-
-.menu {
-    
-    align-items: stretch;
-    visibility: hidden;
-}
-
-.nav-item {
-    background: #2b57a1;
-    ;
-    /* display: flex; */
-    align-items: center;
-    align-self: center;
-    justify-content: center;
-    height: 52px;
-    margin: 5px;
-    width: 230px;
-    color: white;
-    text-decoration: none;
-    letter-spacing: 4px;
-    cursor: pointer;
-}
-
-.nav-item:hover {
-    color: #5e9aff;
-}
-
-#hero {
-    margin: 0;
-}
-
-.hero-container {
-    margin-top: 76px;
-    margin-left: 0;
-    margin-right: 0;
-    background-color: #2b57a1;
-    /* display: flex; */
-
-}
-
-.hero-left {
-    width: 50%;
-    display: block;
-}
-
-.hero-text {
-    background: #2b57a1;
-    width: 110%;
-    margin: 20px auto 40px 50px;
-    padding: 20px;
-    /* text-align: center; */
-    color: #f1f4fc;
-    
-}
-
-.hero-text__small {
-    margin-left: 54px;
-    margin-top: 30px;
-}
-.hero-text__big{
-    margin-left: 40px; 
-}
-
-.hero-button {
-    background: #2b57a1;
-    color: white;
-    margin-top: 60px;
-    margin-left: 25px
-    
-   
-}
-.hero-button__color {
-    background: white;
-    padding: 5px 20px;
-    border-radius: 10px;
-    color: black;
-   
-}
-
-.hero-right {
-    position: relative;
-    height: 281px;
-    width: 450px;
-    margin: 0 auto;
-    margin-top: 70px;
-}
-
-.hero-right img {
-    width: 100%;
-    height: 100%;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-    position: absolute;
-    transition: all 2s;
-}
-
-.hero-right img:first-child {
-    opacity: 0;
-}
-
-.hero-right img:last-child {
-    opacity: 1;
-    animation: appear 2s;
-}
-
-@keyframes appear {
-    0% {
+    body {
+        margin: 0;
+        font-family: 'Gamja Flower', cursive;
+        font-size: 28px;
+    }
+    h1, h2, h3 {
+        font-family: 'Pacifico', cursive;
+        font-weight: normal;
+    }
+    #nav {
+        height: 76px;
+        background: #2b57a1;
+        /* display: flex; */
+        justify-content: space-between;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 9000;
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+    }
+    .logo {
+        height: 80px;
+        width: 120px;
+        margin-left: 135px;
+        align-self: center;
+        /* display: flex; */
+        justify-content: center;
+        align-items: center;
+    }
+    .menu {
+        align-items: stretch;
+        visibility: hidden;
+    }
+    .nav-item {
+        background: #2b57a1;
+        ;
+        /* display: flex; */
+        align-items: center;
+        align-self: center;
+        justify-content: center;
+        height: 52px;
+        margin: 5px;
+        width: 230px;
+        color: white;
+        text-decoration: none;
+        letter-spacing: 4px;
+        cursor: pointer;
+    }
+    .nav-item:hover {
+        color: #5e9aff;
+    }
+    #hero {
+        margin: 0;
+    }
+    .hero-container {
+        margin-top: 76px;
+        margin-left: 0;
+        margin-right: 0;
+        background-color: #2b57a1;
+        /* display: flex; */
+    }
+    .hero-left {
+        width: 50%;
+        display: block;
+    }
+    .hero-text {
+        background: #2b57a1;
+        width: 110%;
+        margin: 20px auto 40px 50px;
+        padding: 20px;
+        /* text-align: center; */
+        color: #f1f4fc;
+    }
+    .hero-text__small {
+        margin-left: 54px;
+        margin-top: 30px;
+    }
+    .hero-text__big {
+        margin-left: 40px;
+    }
+    .hero-button {
+        background: #2b57a1;
+        color: white;
+        margin-top: 60px;
+        margin-left: 25px
+    }
+    .hero-button__color {
+        background: white;
+        padding: 5px 20px;
+        border-radius: 10px;
+        color: black;
+    }
+    .hero-right {
+        position: relative;
+        height: 281px;
+        width: 450px;
+        margin: 0 auto;
+        margin-top: 70px;
+    }
+    .hero-right img {
+        width: 100%;
+        height: 100%;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+        position: absolute;
+        transition: all 2s;
+    }
+    .hero-right img:first-child {
         opacity: 0;
     }
-    100% {
+    .hero-right img:last-child {
         opacity: 1;
+        animation: appear 2s;
     }
-}
-
-#hero a {
-    text-decoration: none;
-    height: 52px;
-    letter-spacing: 4px;
-    cursor: pointer;
-    transition: color 0.5s, font-size 0.5s;
-}
-
-#hero a :hover {
-    color: lightblue;
-}
-
-.main-title {
-    background: rgb(221, 152, 152);
-    height: 250px;
-    text-align: center;
-}
-
-.main-box {
-    /* display: flex; */
-    justify-content: space-around;
-    padding-top: 40px;
-}
-
-.main-column {
-    margin: 5px;
-    text-align: center;
-}
-
-.main-icon {
-    display: block
-}
-
-.form-container {
-    height: 600px;
-    background: #f1f4fc;
-    /* display: flex; */
-    align-items: center;
-    justify-content: center;
-}
-
-.form {
-    height: 35%;
-    width: 40%;
-    background: #5e93d4;
-    /* display: flex; */
-    align-items: center;
-    border-radius: 15px;
-    justify-content: center;
-}
-
-form {
-    /* display: flex; */
-    align-items: center;
-    border-radius: 15px;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.form-input {
-    border-radius: 15px;
-    justify-content: center;
-}
-
-.form-text {
-    letter-spacing: 2px;
-    margin-bottom: 1rem;
-    color: #122843;
-}
-
-.form-text2 {
-    margin-bottom: 1rem;
-    color: #122843;
-}
-
-.form-btn {
-    border-radius: 15px;
-}
-
-.form-btn button {
-    width: 205px;
-    border-radius: 5px;
-    border-color: #448aff;
-    background: #448aff;
-    color: #f1f4fc;
-}
-
-input {
-    height: 20px;
-    width: 205px;
-    background: #f1f4fc;
-    border-radius: 5px;
-}
-
-.form {
-    height: 60%;
-    background: #18bfac
-}
-
-
-.team-top {
-    /* display: flex; */
-    justify-content: space-between;
-}
-
-.team-description {
-    width: 50%;
-    margin: 10px;
-}
-
-.team-logo {
-    width: 20%;
-    margin: 10px;
-}
-
-.team-logo-img {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 5%;
-    box-shadow: 0 0 20px whitesmoke;
-}
-
-.team-bottom {
-    /* display: flex; */
-    justify-content: space-between;
-    padding-left: 5%;
-    padding-right: 5%;
-}
-
-.team-member {
-    margin: 10px;
-    max-width: 20%;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
-}
-
-.team-member, .team-description {
-    box-sizing: border-box;
-}
-
-.member-img-container, .member-description, .member-links {
-    box-sizing: border-box;
-    max-width: 100%;
-    margin-bottom: 5px;
-}
-
-.member-img-container {
-    
-    box-shadow: 0 0 20px whitesmoke
-}
-
-.member-description {
-    text-align: center;
-    box-shadow: 0 0 15px white;
-    animation: appear 5s;
-    font-size: 22px;
-    line-height: 1.1;
-    margin-top: 5px;
-}
-
-.member-links {
-    /* display: flex; */
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    padding: 10px;
-}
-
-.member-links>a {
-    color: black;
-    transition: 2s ease-out;
-}
-
-
-.member-links>a:hover {
-    color: darkmagenta;
-    transform: scale(1.1);
-    transition: 0.5s;
-}
-
-.member-img-container:hover {
-    /* animation: permarotate infinite 1s linear; */
-}
-
-@keyframes permarotate {
-    to {
-        transform: rotate(360deg);
+    @keyframes appear {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
     }
-}
-
-@keyframes appear {
-    from {
-        opacity: 0;
+    #hero a {
+        text-decoration: none;
+        height: 52px;
+        letter-spacing: 4px;
+        cursor: pointer;
+        transition: color 0.5s, font-size 0.5s;
     }
-    to {
-        opacity: 1;
+    #hero a :hover {
+        color: lightblue;
     }
-}
+    .main-title {
+        background: rgb(221, 152, 152);
+        height: 250px;
+        text-align: center;
+    }
+    .main-box {
+        /* display: flex; */
+        justify-content: space-around;
+        padding-top: 40px;
+    }
+    .main-column {
+        margin: 5px;
+        text-align: center;
+    }
+    .main-icon {
+        display: block
+    }
+    .form-container {
+        height: 250px;
+        background: #18bfac;
+        align-items: center;
+        justify-content: center;
+    }
+    .form {
+        height: 35%;
+        width: 40%;
+        background: #5e93d4;
+        align-items: center;
+        width: 100%
+    }
+    form {
+        border-radius: 15px;
+        
+    }
+    .form-input {
+        border-radius: 15px;
+        justify-content: center;
+    }
+    .form-text {
+        letter-spacing: 2px;
+        color: #122843;
+        text-align: center;
+       
 
-.footer {
-    background: #2b57a1;
-}
-
-.footer-text {
-    /* display: flex; */
-    justify-content: center;
-    color: aliceblue;
-    padding-top: 30px;
-    padding-bottom: 30px;
-}
+    }
+    .form-text2 {
+        margin-bottom: 1rem;
+        color: #122843;
+    }
+    .form-btn {
+        border-radius: 15px;
+        margin-top: 42px;
+        margin-left: 78px;
+    }
+    .form-btn button {
+        width: 205px;
+        border-radius: 5px;
+        border-color: #448aff;
+        background: #448aff;
+        color: #f1f4fc;
+    }
+    input {
+        height: 20px;
+        width: 205px;
+        background: #f1f4fc;
+        border-radius: 5px;
+    }
+    .form {
+        height: 60%;
+        background: #18bfac
+    }
+    .team-top {
+        /* display: flex; */
+        justify-content: space-between;
+    }
+    .team-description {
+        width: 50%;
+        margin: 10px;
+    }
+    .team-logo {
+        width: 20%;
+        margin: 10px;
+    }
+    .team-logo-img {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 5%;
+        box-shadow: 0 0 20px whitesmoke;
+    }
+    .team-bottom {
+        /* display: flex; */
+        justify-content: space-between;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    .team-member {
+        margin: 10px;
+        max-width: 20%;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+    }
+    .team-member, .team-description {
+        box-sizing: border-box;
+    }
+    .member-img-container, .member-description, .member-links {
+        box-sizing: border-box;
+        max-width: 100%;
+        margin-bottom: 5px;
+    }
+    .member-img-container {
+        box-shadow: 0 0 20px whitesmoke
+    }
+    .member-description {
+        text-align: center;
+        box-shadow: 0 0 15px white;
+        animation: appear 5s;
+        font-size: 22px;
+        line-height: 1.1;
+        margin-top: 5px;
+    }
+    .member-links {
+        /* display: flex; */
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        padding: 10px;
+    }
+    .member-links>a {
+        color: black;
+        transition: 2s ease-out;
+    }
+    .member-links>a:hover {
+        color: darkmagenta;
+        transform: scale(1.1);
+        transition: 0.5s;
+    }
+    .member-img-container:hover {
+        /* animation: permarotate infinite 1s linear; */
+    }
+    @keyframes permarotate {
+        to {
+            transform: rotate(360deg);
+        }
+    }
+    @keyframes appear {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
+    }
+    .footer {
+        background: #2b57a1;
+    }
+    .footer-text {
+        /* display: flex; */
+        justify-content: center;
+        color: aliceblue;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
 }
