--- a/project.desktop.css
+++ b/project.desktop.css
@@ -204,8 +204,14 @@ form {
 
 .form-text {
     letter-spacing: 2px;
+    margin-top: 13px;
     margin-bottom: 1rem;
     color: #122843;
+    padding-top: 23px;
+}
+.form-text__input{
+    margin-left: 75px;
+    margin-top: 50px;
 }
 
 .form-text2 {
