--- a/project.desktop.css
+++ b/project.desktop.css
@@ -306,6 +306,7 @@ input {
    /* font-size: 22px; */
     line-height: 1.1;
     margin-top: 5px;
+    padding-bottom: 30px;
 } 
 
 .member-links {
@@ -327,8 +328,8 @@ input {
     transition: 0.5s;
 }
 
-.member-img-container:hover {
-    /* animation: permarotate infinite 1s linear; */
+/* .member-img-container:hover {
+    animation: permarotate infinite 1s linear; 
 }
 
 @keyframes permarotate {
@@ -345,6 +346,7 @@ input {
         opacity: 1;
     }
 }
+*/
 
 .footer {
     background: #2b57a1;
