--- a/project.css
+++ b/project.css
@@ -29,6 +29,7 @@
         justify-content: center;
         align-items: center;
         position: relative;
+        visibility: hidden;
     }
     .menu {
         align-items: stretch;
@@ -50,7 +51,8 @@
         cursor: pointer;
     }
     .nav-item:hover {
-        color: #5e9aff;
+        background: #5e9aff;
+        border-radius: 10%;
     }
     #hero {
         margin: 0;
