bg img looks neat now

--- a/game/game.css
+++ b/game/game.css
@@ -26,6 +26,7 @@ div {
     'temp temp main main main automate automate';
 
     background-color: rgba(175, 227, 240, 1);
+    background-image: url(img/bgBlue.jpg);
 
 }
 
