--- a/game/game.css
+++ b/game/game.css
@@ -3,6 +3,7 @@
 body {
     box-sizing: border-box;
     margin: 0;
+    color: aliceblue;
 }
 
 div {
@@ -27,6 +28,7 @@ div {
 
     background-color: rgba(175, 227, 240, 1);
     background-image: url(img/bgBlue.jpg);
+    
 
 }
 
@@ -35,19 +37,26 @@ div {
 
 
 .score-content {
-    grid-area: score
+    grid-area: score;
+   
 }
 
 .score {
-    width: 100%;
-    height: 50%;
+    width: 70%;
+    height: 40%;
+    font-size: 2em;
+    text-align: center;
+    margin: auto;
+
+    
 }
 
 .task-click-field {
     grid-area: clickarea;
     display: flex;
     align-items: center;
-    justify-content: center
+    justify-content: center;
+    
 }
 
 .sloth-img {
@@ -72,10 +81,19 @@ div {
 
 .menu {
     grid-area: menu;
+    border-left: 10px solid #b4896394;
+    border-right: 10px solid #b4896394;
+
+
 }
 
 .main {
     grid-area: main;
+    border-left: 10px solid #b4896394;
+    border-right: 10px solid #b4896394;
+    border-top: 10px solid #b4896394;
+
+    
 }
 
 /* center part end */
@@ -91,6 +109,8 @@ div {
 
 .upgrades {
     grid-area: upgrades;
+    border-top: 10px solid #b4896394;
+    border-bottom: 10px solid #b4896394;
 }
 
 .automate {
