--- a/game/game.css
+++ b/game/game.css
@@ -15,21 +15,29 @@ div {
 
 /*  */
 
+#app {
+    background-image: url(img/Scrum\ Board\ Example.jpg);
+}
+
 /*vvv touching these breaks the layout vvv*/
 .game-container {
-    height: 800px;
+    height: 900px;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: repeat(7, 1fr);
     grid-template-areas: 'score score menu menu menu title title' 'score score main main main upgrades upgrades' 'clickarea clickarea main main main upgrades upgrades' 'clickarea clickarea main main main automate automate' 'clickarea clickarea main main main automate automate' 'clickarea clickarea main main main automate automate' 'temp temp main main main automate automate';
-    background-color: rgba(175, 227, 240, 1);
-    background-image: url(img/bgBlue.jpg);
+    background-color: rgba(40, 106, 141, 0.6);
+    
+    grid-column-gap: 1%;
+    grid-row-gap: 1%
 }
 
 /* left part */
 
 .score-content {
     grid-area: score;
+        background-image: url(img/bgBlue.jpg);
+
 }
 
 .score-counters {
@@ -43,7 +51,7 @@ div {
 .score {
     width: 100%;
     height: 70%;
-    font-size: 2em;
+    font-size: 3em;
     text-align: center;
 }
 
@@ -55,6 +63,7 @@ div {
     width: 100%;
     height: 25%;
     text-align: center;
+    font-size: 1.5em;
 }
 
 .score-per-second p {
@@ -69,20 +78,30 @@ div {
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 .sloth-img {
     height: 50%;
-    width: 25%
+    width: 25%;
 }
 
 .click-me {
     width: 45%;
-    height: 50%
+    height: 50%;
+    background-image: url(img/clicknote.svg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    text-align: center;
+    color: black;
+    font-size: 3.5em;
+
 }
 
 .temp-content {
     grid-area: temp;
+    background-image: url(img/bgBlue.jpg);
+
 }
 
 /* left part end */
@@ -91,16 +110,29 @@ div {
 
 .menu {
     grid-area: menu;
-    border-left: 10px solid #b4896394;
-    border-right: 10px solid #b4896394;
+    font-size: 2em;
     text-align: center;
+    background-image: url(img/bgBlue.jpg);
+
+
 }
 
 .main {
     grid-area: main;
-    border-left: 10px solid #b4896394;
-    border-right: 10px solid #b4896394;
-    border-top: 10px solid #b4896394;
+    background-image: url(img/bgBlue.jpg);
+    
+}
+
+.end-screen {
+    width: 90%;
+    height: 90%;
+    color: black;
+    text-align: center;
+    font-size: 5em;
+    margin: auto;
+    background-image: url(img/note.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 /* center part end */
@@ -110,20 +142,33 @@ div {
 .shop-title {
     grid-area: title;
     text-align: center;
-    margin: auto
+    font-size: 4em;
+    
+    background-image: url(img/bgBlue.jpg);
+
 }
 
 .upgrades {
     grid-area: upgrades;
-    border-top: 10px solid #b4896394;
-    border-bottom: 10px solid #b4896394;
+    font-size: 1.2em;
     line-height: 0;
+    background-image: url(img/bgBlue.jpg);
+
+
+}
+
+.upgrade-item {
+    display: inline-block;
 
 }
 
 .automate {
     grid-area: automate;
     line-height: 0;
+    font-size: 1.2em;
+
+    background-image: url(img/bgBlue.jpg);
+
 
 }
 
