back to origin color

--- a/project.css
+++ b/project.css
@@ -2,9 +2,9 @@
     {
         margin: 0;
         padding: 0;
-        background: #232323;
         color: #cdcdcd;
-        font-family: "Avenir Next", "Avenir", sans-serif;
+        font-family: 'Gamja Flower', cursive;
+        font-size: 28px;
     }
     
     a
