--- a/project.css
+++ b/project.css
@@ -44,8 +44,8 @@
         
         cursor: pointer;
         
-        opacity: 0; /* hide this */
-        z-index: 2; /* and place it over the hamburger */
+        opacity: 0;
+        z-index: 2;
         
         -webkit-touch-callout: none;
     }
@@ -106,7 +106,6 @@
         padding: 50px;
         padding-top: 125px;
         
-        background: #ededed;
         list-style-type: none;
         -webkit-font-smoothing: antialiased;
   
