changing text color

--- a/project.css
+++ b/project.css
@@ -10,7 +10,7 @@
     a
     {
         text-decoration: none;
-        color: #232323;
+        color: #ffffff;
   
         transition: color 0.3s ease;
     }
