--- a/project.css
+++ b/project.css
@@ -106,6 +106,7 @@
         padding: 50px;
         padding-top: 125px;
         
+        background: #2b57a1;
         list-style-type: none;
         -webkit-font-smoothing: antialiased;
   
