--- a/project.desktop.css
+++ b/project.desktop.css
@@ -32,6 +32,10 @@ h1, h2, h3 {
     align-items: center;
 }
 
+#menu {
+    display: none;
+}
+
 .menu {
     display: flex;
     align-items: stretch;
