form describe & stylings

--- a/project.css
+++ b/project.css
@@ -295,7 +295,7 @@
         letter-spacing: 2px;
         color: #122843;
         text-align: center;
-        padding-top: 11px;
+        padding: 0 15px;
     }
     .form-text__input{
         /* margin-left: 76px;
