forn clor changed

--- a/project.css
+++ b/project.css
@@ -222,6 +222,7 @@
         width: 450px;
         margin: 0 auto;
         margin-top: 70px;
+        color: #f1f4fc;
     }
     .hero-right img {
         width: 100%;
