--- a/project.css
+++ b/project.css
@@ -203,6 +203,10 @@
         /* text-align: center; */
         color: #f1f4fc;
     }
+
+    .hero-text_sloth_down {
+    
+    }
     
     .hero-button {
         background: #2b57a1;
