--- a/project.desktop.css
+++ b/project.desktop.css
@@ -92,6 +92,10 @@ h1, h2, h3 {
     margin-top: 30px;
 }
 
+.hero-text_sloth_down {
+    
+}
+
 .hero-button {
     background: #2b57a1;
     text-align: center;
