--- a/project.desktop.css
+++ b/project.desktop.css
@@ -93,7 +93,11 @@ h1, h2, h3 {
 }
 
 .hero-text_sloth_down {
-    
+    width: 120%;
+    margin: 20px auto 40px 50px;
+    padding: 20px;
+    text-align: center;
+    color: #f1f4fc;
 }
 
 .hero-button {
@@ -117,7 +121,7 @@ h1, h2, h3 {
     height: 281px;
     width: 450px;
     margin: 0 auto;
-    margin-top: 70px;
+    margin-top: -10px;
     color: #f1f4fc;
 }
 
