--- a/project.desktop.css
+++ b/project.desktop.css
@@ -68,6 +68,7 @@ h1, h2, h3 {
 }
 
 .hero-container {
+    height: 500px;
     margin-top: 76px;
     margin-left: 0;
     margin-right: 0;
@@ -95,7 +96,7 @@ h1, h2, h3 {
 
 .hero-text_sloth_down {
     width: 120%;
-    margin: 20px auto 40px 50px;
+    /* margin: 20px auto 40px 50px; */
     padding: 20px;
     text-align: center;
     color: #f1f4fc;
@@ -121,24 +122,21 @@ h1, h2, h3 {
 
 .hero-right {
     position: relative;
-    height: 281px;
-    width: 450px;
+    /* height: 281px; */
+    /* width: 450px; */
     margin: 0 auto;
     margin-top: -10px;
     color: #f1f4fc;
 }
 
-.hero-right img {
-    width: 100%;
-    height: 100%;
+.hero-slider img {
+    /* width: 100%;
+    height: 100%; */
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-    position: absolute;
+    /* position: absolute; */
     transition: all 4s;
+    
 }
-
-/* .hero-slider {
-    height: 1000px;
-} */
 
 .hero-right img:first-child {
     opacity: 0;
