--- a/project.desktop.css
+++ b/project.desktop.css
@@ -68,7 +68,7 @@ h1, h2, h3 {
 }
 
 .hero-container {
-    height: 500px;
+    height: 420px;
     margin-top: 76px;
     margin-left: 0;
     margin-right: 0;
@@ -83,22 +83,19 @@ h1, h2, h3 {
 
 .hero-text {
     background: #2b57a1;
-    width: 50%;
-    margin: 20px auto 40px 50px;
+    width: 58%;
+    margin: 0 auto;
     padding: 20px;
     text-align: center;
     color: #f1f4fc;
 }
 
 .hero-text__small {
-    margin-top: 30px;
+    margin-top: 40px;
 }
 
 .hero-text_sloth_down {
-    width: 120%;
-    /* margin: 20px auto 40px 50px; */
     padding: 20px;
-    text-align: center;
     color: #f1f4fc;
     font-weight: normal;
     
@@ -108,8 +105,8 @@ h1, h2, h3 {
     background: #2b57a1;
     text-align: center;
     color: white;
-    margin-bottom: 20px;
-    margin-top: 20px;
+    /* margin-bottom: -200px; */
+    margin-top: 70px;
     text-align: center;
 }
 
@@ -135,7 +132,8 @@ h1, h2, h3 {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
     /* position: absolute; */
     transition: all 4s;
-    
+    border-radius: 20px;  
+    margin-top: -20px;
 }
 
 .hero-right img:first-child {
