--- a/project.css
+++ b/project.css
@@ -189,6 +189,7 @@
         margin-left: 0;
         margin-right: 0;
         background-color: #2b57a1;
+        height: 530px;
         /* display: flex; */
     }
     .hero-left {
@@ -228,12 +229,14 @@
         /* margin-top: 70px; */
         color: #f1f4fc;
     }
-    .hero-right img {
-        width: 100%;
-        height: 100%;
+    .hero-slider img {
+        width: 90%;
+        height: 90%;
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
         position: absolute;
         transition: all 4s;
+        text-align: center;
+        border-radius: 20px;
     }
     .hero-right img:first-child {
         opacity: 0;
